--- a/templates/fizz.html
+++ b/templates/fizz.html
@@ -16,10 +16,10 @@
             <ul>{{i}} Buzz</ul>
         {% endif %}
         {% endfor%}
-        <p>This is a sample HTML template.</p>
+        <p>This is me learning how to use jinja templates.</p>
     </main>
     <footer>
-        <p>Copyright ©2021 My Website</p>
+        <p>Copyright ©2021</p>
     </footer>
   </body>
 </html>
